--- a/style.css
+++ b/style.css
@@ -1,8 +1,10 @@
-.buttons {
+.container {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+}
+.buttons {
     display: flex;
     gap: 50px;
 }
